# pitt

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/: agent_instructions.md  coursera_agent.py  google_calendar_agent.py  linear_agent.py  requirements.txt
course_1/Midterm/: midterm_instructions.html
course_2/: NetworkX_Tutorial_from_Module8.ipynb  Python_Plots_Assignment.ipynb
docs/: fire-safety.html  index.html  manufacturing.html  network.html  spotify.html  styles.css
foundation_llm/: book.ipynb
huggingface_spaces/fire-safety-dashboard/: DEPLOY.md  README.md  app.py  pyproject.toml
notebooks/: README.md
notebooks/project_1_network_analysis/: Network_Analysis_Answers_Part2.md  README.md  network_centrality_analysis.ipynb
notebooks/project_2_map_visualization/: README.md  geospatial_visualization.ipynb
notebooks/project_3_data_story_final/: README.md  fire_safety_dashboard.py  updated_analysis.py
publications/fire_safety_dashboard/: _quarto.yml
publications/manufacturing_analytics/: _quarto.yml
publications/network_analysis/: _quarto.yml
publications/spotify_popularity/: _quarto.yml
scrapped_transcripts/: Chuba_Yevheniy_EDA.py  Chuba_Yevheniy_Midterm.py  Final-Project-Grading-Rubric-2024-2025.docx  Final-Project-Instructions-2024-2025.docx  hw11.py
scrapped_transcripts/week_11/: analyzing-the-confidence-intervals-and-coefficients.txt  analyzing-the-fitted-model.txt  comparing-prediction-intervals-and-confidence-intervals.txt  creating-and-fitting-the-model.txt  (+26 more)
(+366 files in other folders)
