[project]
name = "pitt-research"
version = "1.0.0"
description = "Academic research publications from University of Pittsburgh AI Master's program"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "kaleido>=0.2.1",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "networkx>=3.0",
    "geopandas>=0.14.0",
    "folium>=0.15.0",
    "gradio>=4.0.0",
    "ipykernel>=6.25.0",
]

